# paper-engine

./: .dockerignore  .gitmodules  Dockerfile  Makefile  README.md  TODO.md  agu.csl  agu08_nodoi.bst  agufull08.bst  defs.zsh  env.zsh  fonts.tex  nsf-proposal  pyproject.toml  test-text-processing
.github/workflows/: build-container.yaml
agu-template/: preamble.tex
defs/: appendix-shim.tex  draft.tex  figure-list-shim.tex  pandoc-crossref.yaml
defs/preamble/: 01-start.tex  02-fonts.tex  03-defs.tex  03-units.tex
defs/preamble-thesis/: 01-start.tex  02-fonts.tex  03-defs.tex
env/: paper-config.zsh  text-toolchain.zsh
examples/: title-block.tex
filters/: prepare-crossref  remove-figures-tables.lua  remove-section-references
formats/gsa/: gsa.csl  pandoc-crossref.yaml  reference.docx
html-viewer/: browser.js  browser.styl  figment.styl  fonts.css  index.html  package-lock.json  package.json  paper.styl  template.html  typography.styl
html-viewer/scripts/: watch-text
includes/: figure-multi.tex  figure.tex  plate.tex  sideways-figure.tex  sideways-table.tex  table.tex
includes/journal/: table.tex
includes/standalone/: figure-multi.tex  figure.tex  plate.tex  sideways-figure.tex  sideways-table.tex  table.tex
nsf-proposal/: appendix-shim.tex  draft.tex
nsf-proposal/includes/: figure.tex  wrap-figure.tex
nsf-proposal/preamble/: 01-start.tex  02-fonts.tex  04-table-of-contents.tex  (+2 more)
templates/: nsf-proposal-template.tex  reference-gsab.docx  reference.docx  review-responses-template.docx  review-responses-template.html
tests/: test_filters.py
(+11 files in other folders)
