[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = ""
name = "paper-components"
version = "0.1.0"

[tool.poetry.dependencies]
Pandoc-Comment-Filter = {path = "./modules/Pandoc-Comment-Filter", develop = true}
bib-filter = {path = "./modules/bib-filter", develop = true}
figurator = {path = "./modules/figurator", develop = true}
panflute = "^2.1.5"
pypandoc = "^1.8.1"
python = "^3.9"
wrap-si-units = {path = "./modules/wrap-si-units", develop = true}
pydantic = "^1.10.7"
docx2pdf = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
